Database/Collection drop during initial sync can cause collmod to fail initial sync

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Repl 14 (05/13/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If during the cloning of collections the database is dropped then it is possible that none of the collections are copied – same can happen with a collection as well. If we then apply an operation from the oplog which tries to change that collection, like collMod, it is possible for it fail and error (causing a shutdown of the server).

      We should write a test to reproduce this before we attempt a fix, to ensure it is a real problem.

      One possible solution might be that we check if the collection still exists remotely and if not, ignore the error – since the database will be dropped later in the oplog.

            Assignee:
            Eric Milkie
            Reporter:
            Scott Hernandez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: