SERVER-23919 gather all collection names at the start of initial sync